# multi-agent-test

scripts/repro-rust-backend/: Cargo.toml  README.md
scripts/repro-rust-backend/src/: main.rs
scripts/repro-ts/: package-lock.json  package.json  repro-sequence-number.ts  transfer_two_by_two.mv
scripts/repro-wallet-adapter/: package-lock.json  package.json
scripts/repro-wallet-adapter-movement/: package-lock.json  package.json
scripts/repro-wallet-adapter-movement-client-submission/: index.html  package-lock.json  package.json
scripts/repro-wallet-adapter-movement-client-submission/src/: App.tsx  MultiAgentTest.tsx
scripts/repro-wallet-adapter-movement/src/: App.tsx  MultiAgentTest.tsx
scripts/repro-wallet-adapter/src/: MultiAgentTest.tsx
